# lerobot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .pre-commit-config.yaml  99-fixed-interbotix-udev.rules  =1.09  =3.0.0  AGENTS.md  AGENT_GUIDE.md  AI_POLICY.md  ASYNC_ENCODING_IMPLEMENTATION_SUMMARY.md  BILL_OF_MATERIALS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COURSE_SUBMISSION.md  DEPTH_CAMERA_INTEGRATION.md  DOCS_REDESIGN.md  Dockerfile  ENCODING_FEATURES_GUIDE.md  ENCODING_PERFORMANCE_MEASUREMENT_GUIDE.md  ENCODING_SPEED_ANALYSIS.md  GPU_ENCODING_GUIDE.md  GPU_ENCODING_README.md  GPU_ENCODING_RECORDING_ISSUES.md  Guide  INFERENCE_LOGGING_README.md  KFOLD_README.md  LICENSE  MANIFEST.in  MUJOCO_LOG.TXT  MUJOCO_SIM_README.md  MULTIPLE_DATASETS.md  Makefile  NERO_Lerobot_Experiment_Guide.md  PERFORMANCE_NOTES.md  PERFORMANCE_REPORT.md  (+296 more)
.beads/: .gitignore  .migration-hint-ts  config.yaml  issues.jsonl
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml
.github/poetry/cpu/: pyproject.toml
.venv_lerobot_pi0/: pyvenv.cfg
.venv_py312/: pyvenv.cfg
SO-ARM100/: CHANGELOG.md  README.md
SO-ARM100/URDF/SO_5DOF_ARM100_05d.SLDASM/: CMakeLists.txt  package.xml
SO-ARM100/URDF/SO_5DOF_ARM100_05d.SLDASM/config/: joint_names_SO_5DOF_ARM100_05d.SLDASM.yaml
SO-ARM100/URDF/SO_5DOF_ARM100_05d.SLDASM/launch/: display.launch  gazebo.launch
SO-ARM100/URDF/SO_5DOF_ARM100_05d.SLDASM/meshes/: Base.STL  Fixed_Gripper.STL  Lower_Arm.STL  Moving_Jaw.STL  Shoulder_Rotation_Pitch.STL  Upper_Arm.STL  Wrist_Pitch_Roll.STL
SO-ARM100/URDF/SO_5DOF_ARM100_05d.SLDASM/urdf/: SO_5DOF_ARM100_05d.SLDASM.csv  SO_5DOF_ARM100_05d.SLDASM.urdf
SO-ARM100/URDF/SO_7DOF_ARM100_08h_HL_01d_URDF_01.SLDASM/: CMakeLists.txt  package.xml
SO-ARM100/URDF/SO_7DOF_ARM100_08h_HL_01d_URDF_01.SLDASM/config/: joint_names_SO_7DOF_ARM100_08h_HL_01d_URDF_01.SLDASM.yaml
SO-ARM100/URDF/SO_7DOF_ARM100_08h_HL_01d_URDF_01.SLDASM/launch/: display.launch  gazebo.launch
SO-ARM100/URDF/SO_7DOF_ARM100_08h_HL_01d_URDF_01.SLDASM/meshes/: Base.STL  End_Servo.STL  Forearm.STL  Humeral_Elbow.STL  Shoulder_Pitch_Yaw.STL  Upper_Humeral.STL  Wrist_Roll_Yaw.STL  Wrist_Yaw_Pitch.STL
SO-ARM100/URDF/SO_7DOF_ARM100_08h_HL_01d_URDF_01.SLDASM/urdf/: SO_7DOF_ARM100_08h_HL_01d_URDF_01.SLDASM.csv  SO_7DOF_ARM100_08h_HL_01d_URDF_01.SLDASM.urdf
SO101/: README.md
accelerate_configs/: 1gpu_config.yaml  2gpu_config_safe.yaml
act_in_sim/: act_training_example.py  act_using_example.py  act_with_stage_classifier.py  record_dataset_ps4_joystick.py  replay.py  state_models.py
envs/sim_aloha/: README.md  pyproject.toml
envs/sim_aloha/aloha/: env.py  utils.py
envs/sim_aloha/aloha/assets/: bimanual_viperx_end_effector_insertion.xml  scene.xml  tabletop.stl  vx300s_10_custom_finger_left.stl  vx300s_10_custom_finger_right.stl  vx300s_11_ar_tag.stl  vx300s_8_gripper_prop.stl  vx300s_left.xml
envs/sim_aloha/aloha/tasks/: sim.py  sim_end_effector.py
envs/sim_pusht/: README.md  pyproject.toml
envs/sim_pusht/pusht/: pusht_env.py  pusht_image_env.py
envs/sim_xarm/: README.md  pyproject.toml
envs/sim_xarm/xarm/: __init__.py
envs/sim_xarm/xarm/tasks/: base.py  lift.py  peg_in_box.py  push.py  reach.py
envs/sim_xarm/xarm/tasks/assets/: reach.xml
envs/sim_xarm/xarm/tasks/assets/mesh/: block_inner.stl  left_finger.stl  link4.stl  link_base.stl
gym_dora/: README.md  example.py  pyproject.toml
gym_dora/gym_dora/: __init__.py  env.py
lerobot_robot_ax_arm/: README.md  pyproject.toml
lerobot_robot_ax_arm/examples/: simulate_ee_keyboard.py  teleoperate_ee_keyboard.py
lerobot_robot_ax_arm/lerobot_robot_ax_arm/: __init__.py  ax_arm.py  config_ax_arm.py  urdf_mapping.py
lerobot_robot_bi_so_follower_mobile/: pyproject.toml
lerobot_robot_bi_so_follower_mobile/lerobot_robot_bi_so_follower_mobile/: __init__.py  bi_so_follower_mobile.py  config_bi_so_follower_mobile.py
lerobot_teleoperator_rudder_pedal/: pyproject.toml
lerobot_teleoperator_rudder_pedal/lerobot_teleoperator_rudder_pedal/: __init__.py  configuration_rudder_pedal.py  rudder_pedal.py
src/lerobot/robots/openarms/urdf/: .gitattributes  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  openarm_bimanual.urdf  openarm_bimanual_pybullet.urdf  package.xml
src/lerobot/robots/openarms/urdf/config/arm/v10/: inertials.yaml  joint_limits.yaml  kinematics.yaml  kinematics_link.yaml  kinematics_offset.yaml
src/lerobot/robots/openarms/urdf/config/body/v10/: inertials.yaml  kinematics_link.yaml
src/lerobot/robots/openarms/urdf/config/hand/openarm_hand/: inertials.yaml  kinematics_link.yaml
src/lerobot/robots/openarms/urdf/dev/: README.md  release.sh
src/lerobot/robots/openarms/urdf/launch/: display_openarm.launch.py
src/lerobot/robots/openarms/urdf/meshes/arm/v10/collision/: link0_symp.stl  link1_symp.stl  link2_symp.stl  link3_symp.stl  link4_symp.stl  link5_symp.stl  link6_symp.stl  link7_symp.stl
src/lerobot/robots/openarms/urdf/meshes/arm/v10/visual/: link0.dae  link0.stl  link1.stl  link3.stl  link4.stl  link5.stl  link7.stl
src/lerobot/robots/openarms/urdf/meshes/body/v10/collision/: body_link0_symp.stl
src/lerobot/robots/openarms/urdf/meshes/body/v10/visual/: body_link0.dae  body_link0.stl
src/lerobot/robots/openarms/urdf/meshes/ee/openarm_hand/collision/: finger.stl  hand.stl
src/lerobot/robots/openarms/urdf/meshes/ee/openarm_hand/visual/: finger.stl  hand.dae
src/lerobot/robots/openarms/urdf/rviz/: arm_only.rviz  bimanual.rviz
src/lerobot/robots/openarms/urdf/urdf/arm/: openarm_arm.xacro  openarm_macro.xacro
src/lerobot/robots/openarms/urdf/urdf/body/: openarm_body.xacro  openarm_body_macro.xacro
src/lerobot/robots/openarms/urdf/urdf/ee/: ee_with_one_link.xacro  openarm_hand.xacro  openarm_hand_arguments.xacro  openarm_hand_macro.xacro
src/lerobot/robots/openarms/urdf/urdf/robot/: openarm_robot.xacro  v10.urdf.xacro
src/lerobot/robots/openarms/urdf/urdf/ros2_control/: openarm.bimanual.ros2_control.xacro  openarm.ros2_control.xacro
(+7463 files in other folders)
